@@ -1,9 +1,9 @@
-#	$NetBSD: Makefile,v 1.2.2.5 2002/08/29 16:48:10 he Exp $
+#	$NetBSD: Makefile,v 1.2.2.6 2002/09/27 07:24:44 itojun Exp $
 
 .include <bsd.own.mk>
 
 # RCSid:
-#	$Id: Makefile,v 1.2.2.5 2002/08/29 16:48:10 he Exp $
+#	$Id: Makefile,v 1.2.2.6 2002/09/27 07:24:44 itojun Exp $
 #
 #	@(#) Copyright (c) 1995 Simon J. Gerraty
 #
@@ -36,19 +36,25 @@ SRCS+=	verify.c asn1pars.c req.c dgst.c dh.c dhparam.c enc.c passwd.c gendh.c er
 
 CPPFLAGS+= -DMONOLITH -DUSE_SSL
 
-# with normal OpenSSL, NO_{RC5,IDEA} changes ABI due to change in struct/union.
-# we nuked all of them in our header files and it is now safe.
-.if ${MKCRYPTO_RC5} == "no"
-CPPFLAGS+= -DNO_RC5
-.else
-LDADD+=	-lcrypto_rc5
-DPADD+=	${LIBCRYPTO_RC5}
-.endif
+# with normal OpenSSL, NO_{IDEA,MDC2,RC5} changes ABI due to change in
+# struct/union.  we nuked all of them in our header files and it is now safe.
 .if ${MKCRYPTO_IDEA} == "no"
 CPPFLAGS+= -DNO_IDEA
 .else
 LDADD+=	-lcrypto_idea
 DPADD+=	${LIBCRYPTO_IDEA}
+.endif
+.if ${MKCRYPTO_MDC2} == "no"
+CPPFLAGS+= -DNO_MDC2
+.else
+LDADD+=	-lcrypto_mdc2
+DPADD+=	${LIBCRYPTO_MDC2}
+.endif
+.if ${MKCRYPTO_RC5} == "no"
+CPPFLAGS+= -DNO_RC5
+.else
+LDADD+=	-lcrypto_rc5
+DPADD+=	${LIBCRYPTO_RC5}
 .endif
 
 # this must be _after_ the libcrypto_rc5/libcrypto_idea entries.
